...
          "state" : "translated",
          "value" : "此項目將被永久刪除，此操作無法復原。"
        }
      }
    }
  },
  "Delete Important Day?" : {
    "extractionState" : "manual",
    "localizations" : {
      "de" : {
        "stringUnit" : {
          "state" : "translated",
          "value" : "Wichtigen Tag löschen?"
...
            "state" : "translated",
            "value" : "生日"
          }
        }
      }
    },
    "Calendar" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kalender"
...
            "value" : "Kalender"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日历"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "行事曆"
          }
        }
      }
    },
    "Calendar access is not available" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kalenderzugriff ist nicht verfügbar"
...
            "state" : "translated",
            "value" : "行事曆同步"
          }
        }
      }
    },
    "Cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
...
            "state" : "translated",
            "value" : "天"
          }
        }
      }
    },
    "Delete" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Löschen"
...
            "state" : "translated",
            "value" : "完成"
          }
        }
      }
    },
    "Edit" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bearbeiten"
...
            "state" : "translated",
            "value" : "編輯"
          }
        }
      }
    },
    "Edit Important Day" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Wichtigen Tag bearbeiten"
...
            "state" : "translated",
            "value" : "編輯重要日"
          }
        }
      }
    },
    "Enable Automatic Sync" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Automatische Synchronisierung aktivieren"
...
            "state" : "translated",
            "value" : "隱藏"
          }
        }
      }
    },
    "Home" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
...
            "value" : "Hjem"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "首页"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "首頁"
...
            "state" : "translated",
            "value" : "月"
          }
        }
      }
    },
    "Name" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
...
            "value" : "Navn"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "名称"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "名稱"
...
            "state" : "translated",
            "value" : "本月尚無重要日"
          }
        }
      }
    },
    "No important days yet" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Noch keine wichtigen Tage"
...
            "state" : "translated",
            "value" : "搜尋名稱、備註、分類或標籤"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
...
            "value" : "Innstillinger"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "設定"
...
            "state" : "translated",
            "value" : "版本"
          }
        }
      }
    },
    "Week" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Woche"
...
